tests/fail/semantics/ffi_struct_typed_declaration_stays_uninitialized/main.kira
@FFI.Struct { layout: c; }
struct Example {
    var a: U8
}

@Main
function entry() {
    var value: Example
    print(value.a)
    return
}
